add minor title

--- a/docs/latex/TestingPolicy.tex
+++ b/docs/latex/TestingPolicy.tex
@@ -170,4 +170,12 @@ Blix has multiple end to end tests that test the correct functionality of the ap
 These end to end tests either start in the backend or the frontend, and ensure that all the systems execute according to specification untill the request or result finally reaches the other end of the stack.
 End to end testing is inherently slow and all-encompasing, and therefore there are fewer tests for it. These tests are done to ensure that the application is working as a whole, and that all the systems are communicating correctly.
 
+\addcontentsline{toc}{subsection}{Software Quality Assurance}
+\subsection*{Software Quality Assurance}
+
+The software requirements specification outlines quality criteria that must be assessed, measured, and validated for compliance within the project. 
+These criteria are summarized briefly here and elaborated upon in dedicated sections.
+
+
+
 \end{document}
