add link to cicd

--- a/docs/latex/TestingPolicy.tex
+++ b/docs/latex/TestingPolicy.tex
@@ -221,6 +221,8 @@ This is done by using the github hosted runners. These runners are virtual machi
 The github hosted runners are free to use for open source projects, and therefore we can use them for our project,
 allowing us to cut costs and save time. Furthermore github workflows are easy to set up and use, and are integrated with github, allowing us to easily automate our testing process.
 
+For a more in depth view of our cicd pipeline, please refer to the following link : \url{https://github.com/COS301-SE-2023/AI-Photo-Editor/actions}
+
 \addcontentsline{toc}{subsection}{Software Quality Assurance}
 \subsection*{Software Quality Assurance}
 
