--- a/docs/latex/TestingPolicy.tex
+++ b/docs/latex/TestingPolicy.tex
@@ -223,6 +223,12 @@ allowing us to cut costs and save time. Furthermore github workflows are easy to
 
 For a more in depth view of our cicd pipeline, please refer to the following link : \url{https://github.com/COS301-SE-2023/AI-Photo-Editor/actions}
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.95\textwidth]{../pics/actions.png}
+  \caption{Github Actions}
+\end{figure}
+
 \addcontentsline{toc}{subsection}{Software Quality Assurance}
 \subsection*{Software Quality Assurance}
 
