Refactor some docs

--- a/docs/latex/Architecture.tex
+++ b/docs/latex/Architecture.tex
@@ -243,17 +243,24 @@ The system must have a high availability such that the users must be able to cus
 
 \subsection*{Compatibility} 
 
-Compatibility is an extremely important quality requirement for the system. The system must be able to run on a variety of platforms and 
-must be able to support a variety of image formats. Due to the nature of the system, extensive compatibility is required to ensure that the system is able to
-appeal to a wide range of users.
+Compatibility is an extremely important quality requirement for the system. The
+system must be able to run on a variety of platforms and must be able to support
+a variety of image formats. Due to the nature of the system, extensive
+compatibility is required to ensure that the system is able to appeal to a wide
+range of users.
 
 {\bf Quantification}
 
-Compatibility is quantified by the number of platforms that the system is able to run on and the number of image formats that the system is able to support.
+Compatibility is quantified by the number of platforms that the system is able
+to run on and the number of image formats that the system is able to support.
 
-The number of platforms that the system is able to run on is measured by the number of platforms that the system is able to run on, with a specific focus on the most popular platforms.
+The number of platforms that the system is able to run on is measured by the
+number of platforms that the system is able to run on, with a specific focus on
+the most popular platforms.
 
-The number of image formats that the system is able to support is measured by the number of image formats that the system is able to support, with a specific focus on the most popular image formats.
+The number of image formats that the system is able to support is measured by
+the number of image formats that the system is able to support, with a specific
+focus on the most popular image formats.
 
 {\bf Goals}
 
@@ -267,10 +274,7 @@ The system should be compatible with all the most well-known platforms :
 The system should be compatible with all the most well-known image file formats : 
 \begin{enumerate}
     \item JPEG
-    \item TIFF
     \item PNG
-    \item GIF
-    \item BMP
 \end{enumerate}
 
 
